@@ -32,8 +32,8 @@ processing?
    :func:`pyramid.threadlocal.get_current_request` and
    :func:`pyramid.threadlocal.get_current_registry` to work.
 
-#. A :class:`pyramid.interfaces.INewRequest` :term:`event` is sent
-   to any subscribers.
+#. A :class:`pyramid.events.NewRequest` :term:`event` is sent to any
+   subscribers.
 
 #. If any :term:`route` has been defined within application
    configuration, the :mod:`pyramid` :term:`router` calls a
@@ -74,7 +74,7 @@ processing?
    they can be accessed via e.g. ``request.context`` within
    :term:`view` code.
 
-#. A :class:`pyramid.interfaces.IContextFound` :term:`event` is
+#. A :class:`pyramid.events.ContextFound` :term:`event` is
    sent to any subscribers.
 
 #. :mod:`pyramid` looks up a :term:`view` callable using the
@@ -114,14 +114,13 @@ processing?
 
 #. The following steps occur only when a :term:`response` could be
    successfully generated by a normal :term:`view callable` or an
-   :term:`exception view` callable.  :mod:`pyramid` will attempt to
-   execute any :term:`response callback` functions attached via
+   :term:`exception view` callable.  :mod:`pyramid` will attempt to execute
+   any :term:`response callback` functions attached via
    :meth:`pyramid.request.Request.add_response_callback`.  A
-   :class:`pyramid.interfaces.INewResponse` :term:`event` is then
-   sent to any subscribers.  The response object's ``app_iter``,
-   ``status``, and ``headerlist`` attributes are then used to generate
-   a WSGI response.  The response is sent back to the upstream WSGI
-   server.
+   :class:`pyramid.events.NewResponse` :term:`event` is then sent to any
+   subscribers.  The response object's ``app_iter``, ``status``, and
+   ``headerlist`` attributes are then used to generate a WSGI response.  The
+   response is sent back to the upstream WSGI server.
 
 #. :mod:`pyramid` will attempt to execute any :term:`finished
    callback` functions attached via
